--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>抽奖机 - 0And1Story</title>
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.loli.net/ajax/libs/mdui/0.4.3/css/mdui.min.css">
     <script src="https://cdnjs.loli.net/ajax/libs/mdui/0.4.3/js/mdui.min.js"></script>
     <link rel="stylesheet" href="style/main.css">
@@ -42,10 +43,10 @@
                             </div>
                         </div>
                         <div id="actions">
-                            <button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-hidden-sm-down" id="add" type="submit">添加</button>
-                            <button class="mdui-btn mdui-color-red-accent mdui-ripple mdui-hidden-sm-down" id="clear" mdui-dialog="{target: '#warning-dialog'}" type="button">清除所有</button>
-                            <button class="mdui-btn mdui-btn-icon mdui-color-theme-accent mdui-ripple mdui-hidden-md-up" id="add" type="submit"><i class="mdui-icon material-icons">add</i></button>
-                            <button class="mdui-btn mdui-btn-icon mdui-color-red-accent mdui-ripple mdui-hidden-md-up" id="clear" mdui-dialog="{target: '#warning-dialog'}" type="button"><i class="mdui-icon material-icons">delete</i></button>
+                            <button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-hidden-sm-down add" type="submit">添加</button>
+                            <button class="mdui-btn mdui-color-red-accent mdui-ripple mdui-hidden-sm-down clear" mdui-dialog="{target: '#warning-dialog'}" type="button">清除所有</button>
+                            <button class="mdui-btn mdui-btn-icon mdui-color-theme-accent mdui-ripple mdui-hidden-md-up add" type="submit"><i class="mdui-icon material-icons">add</i></button>
+                            <button class="mdui-btn mdui-btn-icon mdui-color-red-accent mdui-ripple mdui-hidden-md-up clear" mdui-dialog="{target: '#warning-dialog'}" type="button"><i class="mdui-icon material-icons">delete</i></button>
                         </div>
                     </form>
                     <button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-block" id="start" onclick="startRandom()"><span>开始</span></button>
